# anontier

./: .gitignore  .secrets-example.toml  Dockerfile  IDEAS.md  MANIFESTO.md  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  secrets.example.toml
app/: __init__.py  __main__.py  broadcast.py  sanitization.py
app/database/: mail.py  message.py  restriction.py  room.py  subscription.py  user.py
app/modules/: __init__.py  information.py  profile.py  restriction.py
app/modules/connection/: __init__.py  antiflood.py  mail_single.py  replicate_action.py  replicate_group.py  replicate_single.py
app/telegram/filters/: room.py
assets/texts/: donation.txt  initialization.txt  manual.txt  premium.txt  terms.txt
messages/: commands..txt  donation.txt  initialization.txt  manual.txt  premium.txt  terms.txt
messages/dynamic/: status.txt
messages/experimental/: forgot_user.txt
src/: __init__.py  __main__.py  _parser.py  broadcast.py  sanitization.py  sanitize.py  session.py
src.old/: broadcast.py
src.old/database/: message.py  room.py  user.py
src.old/modules/: __init__.py
src.old/modules/connection/: __init__.py  mail_single.py  replicate_action.py  replicate_group.py  replicate_single.py
src.old/telegram/modded/: copy_media_group.py
src/database/: __init__.py  _map.py  mail.py  message.py  methods.py  restriction.py  room.py  subscription.py
src/modules/: __init__.py  _purge.py  annihilation.py  connection.py  experimental.py  guidelines.py  information.py  mimic.py  profile.py  restriction.py
src/modules/experimental/: mail.py  (+5 more)
src/session/: __init__.py  mail.py  message.py  room.py  sanitize.py  user.py
(+17 files in other folders)
