[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anodos"
dynamic = ["version"]
description = 'Incognito chat via Telegram'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Anonstry", email = "anonstry@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pymongo",
  "hydrogram",
  "dynaconf",
  "loguru",
  "tgcrypto",
  "pendulum",
  "apscheduler",
  "GitPython",
]

[project.urls]
Documentation = "https://github.com/Anonstry/-#readme"
Issues = "https://github.com/Anonstry/-/issues"
Source = "https://github.com/Anonstry/-"

[tool.hatch.version]
path = "src/_/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/_ tests}"

[tool.coverage.run]
source_pkgs = ["_", "tests"]
branch = true
parallel = true
omit = [
  "src/_/__about__.py",
]

[tool.coverage.paths]
_ = ["src/_", "*/-/src/_"]
tests = ["tests", "*/-/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
